syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.mrray.raychain.sdk.grpc.node";
option java_outer_classname = "RpcProto";
package node;

message P2pReply {
    int32 code = 1;
    string message = 2;
    string payload = 3;
    string packetType = 4;
    string channel_identifier = 5;
}

message P2pRequest {
    string payload = 1;
    string sign = 2;
    string node_identifier = 3;
    string packetType = 4;
    string channel_identifier = 5;
    string msg_id = 6;
}
message ContractRequest {
    string channel_identifier = 1;
    string app_id = 2;
    string sign = 3;
    string payload = 4;
    string file_name = 5;
    string contract_identifier = 6;
}
message ContractFileChunk {
    string file_name = 1;
    bytes content = 2;
    int32 chunk_size = 3;
    bool is_last = 4;
}
service P2pService {
    rpc invoke(P2pRequest) returns (P2pReply) {
    }
    rpc contract(ContractRequest) returns (stream ContractFileChunk) {
    }
}